name:          snowpea
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          snowpea
    hs-source-dirs: src
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    other-modules:  Framework
                  , Podcast
                  , Server
    build-depends:  base >= 4 && < 5
                  , aeson
                  , base64-bytestring
                  , bytestring
                  , case-insensitive
                  , containers
                  , data-default
                  , http-types
                  , interpolatedstring-perl6
                  , jwt
                  , string-conversions
                  , text
                  , wai
                  , warp
